tests/frontend/fail/array/create_arg_inconsistent_array.act
constructor of A
interface constructor(uint[3] u)


constructor of B
interface constructor()

creates
  A a := create A([1,2,false])
